# debatekit

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
debatekit/: __init__.py  agents.py  corpus.py  debate.py  eval.py
examples/: quickstart.py
tests/: test_debatekit.py
