[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debatekit"
version = "0.1.0"
description = "Get a group of noisy agents to a better answer than any one of them. Multiagent debate simulation with a benchmark comparing single-agent, majority-vote, and full-debate accuracy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["llm", "agents", "multiagent", "debate", "consensus", "ensemble", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/debatekit"

[tool.hatch.build.targets.wheel]
packages = ["debatekit"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]
